<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>nl.vpro.amara_poms</groupId>
  <artifactId>amara_poms_publisher</artifactId>
  <version>1.3-SNAPSHOT</version>

  <packaging>jar</packaging>

  <name>amara_publisher</name>
  <url>https://github.com/vpro/amara-poms</url>
  <inceptionYear>2016</inceptionYear>
  <description>A tool to sync amara translations tasks with POMS clips and playlists. Used by http://www.netinnl.nl </description>


  <developers>
    <developer>
      <id>mihxil</id>
      <name>Michiel Meeuwissen</name>
      <email>michiel.meeuwissen+github@gmail.com</email>
      <url>http://www.meeuw.org</url>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>Europe/Amsterdam</timezone>
    </developer>
    <developer>
      <id>joost</id>
      <name>Joost Aafjes</name>
      <email>joost@knijter.nl</email>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>Europe/Amsterdam</timezone>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://git@github.com/vpro/amara-poms.git</connection>
    <developerConnection>scm:git:git@github.com:vpro/amara-poms.git</developerConnection>
    <url>https://github.com/vpro/amara-poms</url>
    <tag>HEAD</tag>
  </scm>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <api.client.version>4.6.0</api.client.version>
    <jackson2.version>2.8.0</jackson2.version>
    <amara-java.version>0.1</amara-java.version>
  </properties>


  <dependencies>
    <dependency>
      <groupId>nl.vpro.api-client</groupId>
      <artifactId>media-backend-rs-client</artifactId>
      <version>${api.client.version}</version>
    </dependency>
    <dependency>
      <groupId>nl.vpro.amara</groupId>
      <artifactId>amara-java</artifactId>
      <version>${amara-java.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.el</groupId>
      <artifactId>javax.el-api</artifactId>
      <version>3.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.web</groupId>
      <artifactId>javax.el</artifactId>
      <version>2.2.6</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.21</version>
    </dependency>


    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-csv</artifactId>
      <version>1.2</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.4.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.16.10</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.10.19</version>
      <scope>test</scope>
    </dependency>


  </dependencies>

  <repositories>
    <repository>
      <id>nexusvpro</id>
      <url>http://nexus.vpro.nl/content/groups/public</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>localfilesmv</id>
      <url>file://${project.basedir}/releases</url>
    </repository>
  </distributionManagement>

  <build>
    <defaultGoal>install</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.3</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                  <resource>META-INF/spring.handlers</resource>
                </transformer>
             <!--   <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
                  <resource>META-INF/spring.factories</resource>
                </transformer>-->
                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                  <resource>META-INF/spring.schemas</resource>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>nl.vpro.amara_poms.App</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
